# lit-learn

./: README.md  sources.xlsx
.github/workflows/: backup.yml
backups/learning/: learning_notes_data.json
backups/lit-review/llm-judge/: setup.json  sources.xlsx
backups/lit-review/llmjudgepaper/: setup.json  sources.xlsx
backups/lit-review/northernireland/: setup.json  sources.xlsx
client/: README.md  lit_learn.py
learning app/: .gitignore  CLAUDE.md  MODULE9_AI_ethics_safety_governance_UPDATED.docx  app.py  db.py  mockup_v7.html  requirements.txt  secrets.toml.template
learning-app/: CLAUDE.md  app.py  db.py  learning_notes_data.json  secrets.toml.template  seed_from_docx.py
learning-app/.streamlit/: config.toml
lit-review-tool-staging/: .gitignore  CLAUDE.md  README.md  db.py  lit_review_app.py  pyproject.toml  requirements.txt  secrets.toml.template  seed_from_bib.py
lit-review-tool-staging/.streamlit/: config.toml
scripts/: backfill_abstracts.py  backup.py
supabase/: schema.sql
templates/: import_module.py  import_project.py  new_module_prompt.md  new_project_prompt.md
